--- a/cv/index.html
+++ b/cv/index.html
@@ -4,14 +4,15 @@ title: CV
 permalink: /cv/
 published: true
 ---
-<div>
-<h2>Work Experience</h2>
-
-<h2>Educational background</h2>
-<p>
-5 years ago i've never imagined that would make a career in software testing. I know more now about sw testing than i knew back than, that's for sure - but the more i learn about this demanding and challenging task the more i realize that there is still much more to learn.
-
-In this 5y of learning i had the opportunity to work with a lot of different people and technologies, using different testing approaches and methodologies but what i found was that there's no such thing as the best way of doing things, it's all too context dependent - and so our practices should be.
-
-Please contact me outside business hours if you think our conversation can take long.</p>
+<div class="cv">
+  <h2>Work</h2>
+  <h3 id="period">2016 Jan to present</h3>
+  <p id="job">Software tester</p>
+  <p id="company"><a href="https://www.celfocus.com/home/" title="CELFOCUS website">CELFOCUS</a></p>
+  <ul id="tasks">
+    <li>Performance test lead &amp Vodafone IE</li>
+      <p>Leading a performance test team of 6; engaging with client and vendors.
+    <li>Callidus test analyst &amp du</li>
+      <p>Design and execute system and performance test du migrated incentive and compensation system to the cloud.</p>
+  </ul>
 </div>
