--- a/cv/index.html
+++ b/cv/index.html
@@ -5,14 +5,13 @@ permalink: /cv/
 published: true
 ---
 <div class="cv">
-  <h2>Work</h2>
-  <h3 id="period">2016 Jan to present</h3>
-  <p id="job">Software tester</p>
-  <p id="company"><a href="https://www.celfocus.com/home/" title="CELFOCUS website">CELFOCUS</a></p>
+  <h2>Work Experience</h2>
+  <p id="period">jan/2016 to present</p>
+  <p id="company"><em>Company: </em><a href="https://www.celfocus.com/home/" title="CELFOCUS website">CELFOCUS</a></p>
   <ul id="tasks">
-    <li>Performance test lead &amp Vodafone IE</li>
-      <p>Leading a performance test team of 6; engaging with client and vendors.
-    <li>Callidus test analyst &amp du</li>
-      <p>Design and execute system and performance test du migrated incentive and compensation system to the cloud.</p>
+    <li id="taskItem">Performance test lead</li>
+      <p>Working closely with all performance stakeholders i was responsible for the performance test stream.</p>
+    <li id="taskItem">Callidus test analyst (current)</li>
+    <p>Migration testing of du's <abbr Incentive and Compensation Management>ICM</abbr> system in the cloud.</p>
   </ul>
 </div>
