--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@ published: true
   <h2>Work Experience</h2>
   
   <p id="period">jan/2018 to present</p>
-  <p id="company">&amp<a href="https://www.celfocus.com/home/" title="CELFOCUS website">CELFOCUS</a></p>
+  <p id="company">@<a href="https://www.celfocus.com/home/" title="CELFOCUS website">CELFOCUS</a></p>
   <ul id="tasks">
     <li id="taskItem">Performance test lead</li>
       <p>Working closely with all performance stakeholders i was responsible for the performance test stream.</p>
@@ -17,15 +17,22 @@ published: true
   </ul>
   
   <p id="period">aug/2016 to dec/2017</p>
-  <p id="company">&amp<a href="https://www.hitachiconsulting.com/" title="Hitachi website">Hitachi Consulting</a></p>
+  <p id="company">@<a href="https://www.hitachiconsulting.com/" title="Hitachi website">Hitachi Consulting</a></p>
   <ul id="tasks">
     <li id="taskItem">Test analyst</li>
       <p>Working for Dominos UK as part of their testing team i was responsible to design and execute thorough tests over their app pool.</p>
     
   <p id="period">dec/2015 to aug/2016</p>
-  <p id="company">&amp<a href="https://www.noesis.pt/" title="Noesis website">NOESIS</a></p>
+  <p id="company">@<a href="https://www.noesis.pt/" title="Noesis website">NOESIS</a></p>
   <ul id="tasks">
     <li id="taskItem">Test analyst</li>
       <p>Working for Energy21 as part of their testing team i was responsible to design and execute thorough tests over their app pool.</p>
+  </ul>
+    
+  <p id="period">aug/2013 to dec/2015</p>
+  <p id="company">@<a href="https://www.noesis.pt/" title="Noesis website">NOESIS</a></p>
+  <ul id="tasks">
+    <li id="taskItem">Test analyst</li>
+      <p>Working for different clients mainly in telco and energy sectors, i was responsible to design and execute thorough tests.</p>
   </ul>
 </div>
