--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,7 @@ published: true
   </ul>
     
   <p id="period">aug/2013 to dec/2015</p>
-  <p id="company">@<a href="https://www.noesis.pt/" title="Noesis website">NOESIS</a></p>
+  <p id="company">@<a href="https://www.novabase.pt/" title="Novabase website">Novabase</a></p>
   <ul id="tasks">
     <li id="taskItem">Test analyst</li>
       <p>Working for different clients mainly in telco and energy sectors, i was responsible to design and execute thorough tests.</p>
