--- a/cv/index.html
+++ b/cv/index.html
@@ -44,4 +44,20 @@ published: true
     <li id="taskItem">Transportation engineer</li>
       <p>Working as a transportation engineer I designed roads, highways and other transportation infrastructures. I also did some traffic modeling</p>
   </ul>
+  
+  <h2>Certificates</h2>
+  
+  <p><strong>ISTQB Foundation level</strong></p>
+  <p><em>2013, PSTQB Portuguese Software Testing and Qualifications Board</em></p>
+  
+  <h2>Degrees</h2>
+  
+  <p><strong>NOVA IMS Information Management School</strong></p>
+  <p>Postgraduate degree, Geographic Information Systems and Science (UNIGIS)</p>
+  <p>2012</p>
+  
+  <p><strong>FEUP Faculdade de Engenharia da Universidade do Porto</strong></p>
+  <p>Master degree, Civil Engineering - Transportation</p>
+  <p>2008</p>
+  
 </div>
